src/objects/Member_Gift_Log__c.object
<CustomObject>
    <description>Member Gift Log</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Member Gift Logs</relationshipLabel>
        <relationshipName>Member_Gift_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DateofTransaction__c</fullName>
        <label>Date of Transaction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GiftReason__c</fullName>
        <label>Gift Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Bad Tech Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor Switchout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral - Installed Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GiftType__c</fullName>
        <label>Gift Type</label>
        <picklist>
            <picklistValues>
                <fullName>Gift Basket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Incentive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wifi Reimbursement (monthly)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gift_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gift sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quickbase_Id__c</fullName>
        <label>Quickbase Id</label>
        <type>TextArea</type>
    </fields>
    <label>Member Gift Log</label>
    <nameField>
        <displayFormat>GiftLog-{000000}</displayFormat>
        <label>MemberGiftLog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Member Gift Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Gift_Type_and_Reason</fullName>
        <active>true</active>
        <description>Requires gift type and reason.</description>
        <errorConditionFormula>OR(
ISPICKVAL(GiftType__c, &quot;&quot;),
ISPICKVAL(GiftReason__c, &quot;&quot;))</errorConditionFormula>
        <errorDisplayField>GiftReason__c</errorDisplayField>
        <errorMessage>You must enter both a gift type and reason for sending this gift.</errorMessage>
    </validationRules>
</CustomObject>